--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>oooiii</p>
+    <div class="caixa">
+        <h1>oi</h1>
+        <p>fala de onde</p>
+        <input type="text" id="estado">coloca aqui</input>
+    </div>
 </body>
 </html>
