botao com função

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: firebrick;
+        }
+        .caixa{
+            background: none;
+            border: 1px solid white;        
+        }
+
+    </style>
 </head>
 <body>
     <div class="caixa">
@@ -11,5 +21,11 @@
         <p>fala de onde</p>
         <input type="text" id="estado">coloca aqui</input>
     </div>
+    <button onclick="azar()">clica ai vai</button>
+    <script>
+        function azar(){
+            alert("se clicou vai ter que ver one piece")
+        }
+    </script>
 </body>
 </html>
